@@ -13,7 +13,8 @@ Changes from 1.3.0:
 * Fixed XHTML parsing error in classic skins
 * Moved pages update watchlist correctly
 * Fixed rebuildall.php on case-sensitive Unix filesystems
-
+* Disabled file cache compression by default due to incompatibility
+  with output buffer compression (ob_gzhandler)
 
 == Version 1.3.0, 2004-08-11 ==
 
